@@ -50,7 +50,7 @@
     <Compile Include="Compiler\NameExpectedException.cs" />
     <Compile Include="Compiler\ExpectedTokenException.cs" />
     <Compile Include="Compiler\EndOfInputException.cs" />
-    <Compile Include="Compiler\Parser.cs" />
+    <Compile Include="Compiler\Lexer.cs" />
     <Compile Include="Compiler\Token.cs" />
     <Compile Include="Compiler\TokenType.cs" />
     <Compile Include="Compiler\UnexpectedTokenException.cs" />
